webgui/out.txt
   Compiling socket2 v0.3.11
   Compiling sha1 v0.6.0
   Compiling base-x v0.2.6
   Compiling discard v1.0.4
   Compiling regex-syntax v0.6.12
   Compiling lazy_static v1.4.0
   Compiling boolinator v2.4.0
   Compiling yew v0.10.0
error[E0432]: unresolved import `crate::sys`
  --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\socket.rs:23:5
   |
23 | use crate::sys;
   |     ^^^^^^^^^^ no `sys` in the root
   Compiling anymap v0.12.1
   Compiling semver v0.9.0
   Compiling proc-macro2 v1.0.6
   Compiling crossbeam-utils v0.7.0
   Compiling syn v1.0.11
   Compiling libnghttp2-sys v0.1.2
   Compiling num-traits v0.2.10
   Compiling crossbeam-epoch v0.8.0
   Compiling libz-sys v1.0.25
   Compiling proc-macro2 v0.4.30
   Compiling curl-sys v0.4.24
   Compiling num-integer v0.1.41
   Compiling num-rational v0.2.2
   Compiling num-iter v0.1.39
   Compiling backtrace-sys v0.1.32
error[E0433]: failed to resolve: use of undeclared type or module `c`
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\socket.rs:785:16
    |
785 |         Domain(c::AF_INET)
    |                ^ use of undeclared type or module `c`
error[E0433]: failed to resolve: use of undeclared type or module `c`
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\socket.rs:790:16
    |
790 |         Domain(c::AF_INET6)
    |                ^ use of undeclared type or module `c`
error[E0433]: failed to resolve: use of undeclared type or module `c`
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\socket.rs:820:14
    |
820 |         Type(c::SOCK_STREAM)
    |              ^ use of undeclared type or module `c`
error[E0433]: failed to resolve: use of undeclared type or module `c`
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\socket.rs:827:14
    |
827 |         Type(c::SOCK_DGRAM)
    |              ^ use of undeclared type or module `c`
error[E0433]: failed to resolve: use of undeclared type or module `sys`
  --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\lib.rs:89:12
   |
89 |     inner: sys::Socket,
   |            ^^^ use of undeclared type or module `sys`
   Compiling yew-macro v0.10.0
   Compiling indexmap v1.3.0
error[E0412]: cannot find type `sockaddr` in this scope
  --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:38:47
   |
38 |     pub unsafe fn from_raw_parts(addr: *const sockaddr, len: socklen_t) -> SockAddr {
   |                                               ^^^^^^^^ help: a struct with a similar name exists: `SockAddr`

error[E0412]: cannot find type `socklen_t` in this scope
  --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:38:62
   |
38 |     pub unsafe fn from_raw_parts(addr: *const sockaddr, len: socklen_t) -> SockAddr {
   |                                                              ^^^^^^^^^ not found in this scope
error[E0412]: cannot find type `sockaddr_storage` in this scope
  --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:39:48
   |
39 |         let mut storage = mem::uninitialized::<sockaddr_storage>();
   |                                                ^^^^^^^^^^^^^^^^ not found in this scope
error[E0412]: cannot find type `sa_family_t` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:115:37
    |
115 |     unsafe fn as_<T>(&self, family: sa_family_t) -> Option<T> {
    |                                     ^^^^^^^^^^^ not found in this scope
error[E0425]: cannot find value `AF_INET` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:126:27
    |
126 |         unsafe { self.as_(AF_INET as sa_family_t) }
    |                           ^^^^^^^ not found in this scope
error[E0412]: cannot find type `sa_family_t` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:126:38
    |
126 |         unsafe { self.as_(AF_INET as sa_family_t) }
    |                                      ^^^^^^^^^^^ not found in this scope
error[E0425]: cannot find value `AF_INET6` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:132:27
    |
132 |         unsafe { self.as_(AF_INET6 as sa_family_t) }
    |                           ^^^^^^^^ not found in this scope
error[E0412]: cannot find type `sa_family_t` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:132:39
    |
132 |         unsafe { self.as_(AF_INET6 as sa_family_t) }
    |                                       ^^^^^^^^^^^ not found in this scope
error[E0412]: cannot find type `sa_family_t` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:136:29
    |
136 |     pub fn family(&self) -> sa_family_t {
    |                             ^^^^^^^^^^^ not found in this scope
error[E0412]: cannot find type `socklen_t` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:141:26
    |
141 |     pub fn len(&self) -> socklen_t {
    |                          ^^^^^^^^^ not found in this scope
error[E0412]: cannot find type `sockaddr` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:146:36
    |
146 |     pub fn as_ptr(&self) -> *const sockaddr {
    |                                    ^^^^^^^^ help: a struct with a similar name exists: `SockAddr`

error[E0412]: cannot find type `sockaddr_in` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:156:40
    |
156 |         mem::transmute::<SocketAddrV4, sockaddr_in>(v4);
    |                                        ^^^^^^^^^^^ not found in this scope
error[E0412]: cannot find type `sockaddr_in6` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:157:40
    |
157 |         mem::transmute::<SocketAddrV6, sockaddr_in6>(v6);
    |                                        ^^^^^^^^^^^^ not found in this scope
error[E0412]: cannot find type `socklen_t` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:166:51
    |
166 |                 mem::size_of::<SocketAddrV4>() as socklen_t,
    |                                                   ^^^^^^^^^ not found in this scope
error[E0412]: cannot find type `socklen_t` in this scope
   --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\sockaddr.rs:177:51
    |
177 |                 mem::size_of::<SocketAddrV6>() as socklen_t,
    |                                                   ^^^^^^^^^ not found in this scope
error[E0412]: cannot find type `sockaddr_storage` in this scope
  --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\lib.rs:97:14
   |
97 |     storage: sockaddr_storage,
   |              ^^^^^^^^^^^^^^^^ not found in this scope
error[E0412]: cannot find type `socklen_t` in this scope
  --> C:\Users\Eric\.cargo\registry\src\github.com-1ecc6299db9ec823\socket2-0.3.11\src\lib.rs:98:10
   |
98 |     len: socklen_t,
   |          ^^^^^^^^^ not found in this scope
   Compiling libc v0.2.66
   Compiling byteorder v1.3.2
error: aborting due to 23 previous errors
Some errors have detailed explanations: E0412, E0425, E0432, E0433.
For more information about an error, try `rustc --explain E0412`.
   Compiling serde v1.0.103
error: Could not compile `socket2`.
warning: build failed, waiting for other jobs to finish...
error: build failed
error: build failed
